# Arc_Mind

./: README.md  Thanks
cmake/: CMakeLists.txt
cmake/g3dlite/: CMakeLists.txt
cmake/logon/: CMakeLists.txt
cmake/recast/: CMakeLists.txt
cmake/scripts/: CMakeLists.txt
cmake/scripts/eventsscripts/: CMakeLists.txt
cmake/scripts/gossipscripts/: CMakeLists.txt
cmake/scripts/instancescripts/: CMakeLists.txt
cmake/scripts/luabridge/: CMakeLists.txt
cmake/scripts/luaengine/: CMakeLists.txt
cmake/scripts/miscscripts/: CMakeLists.txt
cmake/scripts/questscripts/: CMakeLists.txt
cmake/scripts/raidsscripts/: CMakeLists.txt
cmake/scripts/worldpvpscripts/: CMakeLists.txt
cmake/shared/: CMakeLists.txt
cmake/spellhandlers/: CMakeLists.txt
cmake/tools/: CMakeLists.txt
cmake/tools/vmap_tools/vmap_assembler/: CMakeLists.txt
cmake/vmap/: CMakeLists.txt
cmake/world/: CMakeLists.txt
dep/Collision/---/: extract.c  mpq_libmpq04.h
dep/Collision/-----/: loadlib.cpp
dep/Collision/g3dlite/: AABox.cpp  Box.cpp  Crypto.cpp  Matrix3.cpp  Plane.cpp  System.cpp  Triangle.cpp  Vector3.cpp  Vector4.cpp  format.cpp
dep/Collision/g3dlite/G3D/: AABox.h  Array.h  Box.h  CollisionDetection.h  CoordinateFrame.h  Crypto.h  GCamera.h  Line.h  Matrix3.h  Plane.h  Quat.h  Quat.inl  Ray.h  RegistryUtil.h  Sphere.h  System.h  Table.h  Triangle.h  Vector2.h  Vector2int16.h  Vector3.h  Vector3.inl  Vector3int16.h  Vector4.h  Vector4.inl  format.h  g3dmath.h  g3dmath.inl  platform.h  stringutils.h
dep/Collision/vmap/: AABSPTree.h  BaseModel.cpp  BaseModel.h  CoordModelMapping.cpp  CoordModelMapping.h  IVMapManager.h  ManagedModelContainer.cpp  ManagedModelContainer.h  ModelContainer.cpp  ModelContainer.h  NodeValueAccess.h  RayIntersectionIterator.h  ShortBox.h  ShortVector.h  SubModel.cpp  SubModel.h  TileAssembler.cpp  TileAssembler.h  TreeNode.cpp  TreeNode.h  VMapManager.cpp  VMapManager.h
sql/: 4524_world_structure.sql  arctic_char.rar  arctic_logon.rar
sql/dbc/: Item.dbc  ItemSet.dbc  WorldSafeLocs.dbc
src/arcemu-shared/: AuthCodes.h  BufferPool.cpp  BufferPool.h  ByteBuffer.h  CThreads.cpp  CThreads.h  CallBack.cpp  CallBack.h  CircularQueue.h  Common.h  CoreMemoryAllocator.cpp  CoreMemoryAllocator_Core.cpp  CrashHandler.cpp  CrashHandler.h  Errors.h  FastQueue.h  LocationVector.h  Log.cpp  Log.h  MemoryLeaks.cpp  MemoryLeaks.h  MersenneTwister.cpp  MersenneTwister.h  NGLog.h  New-Bytebuffer.h  PacketLog.cpp  PacketLog.h  PreallocatedQueue.h  RC4Engine.h  Singleton.h  SmartPointer.h  StackBuffer.h  StackWalker.cpp  StackWalker.h  Storage.h  Timer.h  Util.cpp  Util.h  WoWGuid.h  WorldPacket.h  (+8 more)
src/arcemu-shared/Auth/: BigNumber.cpp  BigNumber.h  HMAC.cpp  HMAC.h  MD5.cpp  MD5.h  Sha1.cpp  Sha1.h  WowCrypt.cpp  WowCrypt.h
src/arcemu-shared/Config/: Config.cpp  Config.h  ConfigEnv.h
src/arcemu-shared/Console/: BaseConsole.h  CConsole.cpp  CConsole.h  ConsoleListener.cpp
src/arcemu-shared/Database/: CreateInterface.cpp  DBC.cpp  DBC.h  DBCStores.cpp  DBCStores.h  DataStore.h  Database.cpp  Database.h  DatabaseEnv.h  Field.h  MySQLDatabase.cpp  MySQLDatabase.h  PostgresDatabase.cpp  PostgresDatabase.h  SQLiteDatabase.cpp  SQLiteDatabase.h  dbcfile.cpp  dbcfile.h
src/arcemu-shared/Database/New Folder/: DBCStores.cpp  DBCStores.h
src/arcemu-shared/Network/: CircularBuffer.cpp  CircularBuffer.h  ListenSocketFreeBSD.h  ListenSocketLinux.h  ListenSocketPoll.h  ListenSocketSelect.h  ListenSocketWin32.h  Network.h  Socket.cpp  Socket.h  SocketDefines.h  SocketFreeBSD.cpp  SocketLinux.cpp  SocketMgrFreeBSD.cpp  SocketMgrFreeBSD.h  SocketMgrLinux.cpp  SocketMgrLinux.h  SocketMgrPoll.cpp  SocketMgrPoll.h  SocketMgrSelect.cpp  SocketMgrSelect.h  SocketMgrWin32.cpp  SocketMgrWin32.h  SocketOps.h  SocketOpsFreeBSD.cpp  SocketOpsLinux.cpp  SocketOpsPoll.cpp  SocketOpsSelect.cpp  SocketOpsWin32.cpp  SocketPoll.cpp  SocketSelect.cpp  SocketWin32.cpp
src/arcemu-shared/Network-New/: BaseBuffer.h  BaseSocket.h  CircularBuffer.h  ListenSocket.h  Network.h  SocketEngine.cpp  SocketEngine.h  SocketEngine_epoll.cpp  SocketEngine_epoll.h  SocketEngine_iocp.cpp  SocketEngine_iocp.h  SocketEngine_kqueue.cpp  SocketEngine_kqueue.h  SocketEngine_poll.cpp  SocketEngine_poll.h  SocketEngine_select.cpp  SocketEngine_select.h  StraightBuffer.h  TcpSocket.cpp  TcpSocket.h
src/arcemu-shared/Threading/: Condition.h  Guard.h  LockedQueue.h  Mutex.cpp  Mutex.h  Queue.h  RWLock.h  ThreadPool.cpp  ThreadPool.h  ThreadStarter.h  Threading.h
src/arcemu-world/: AIInterface.cpp  AIInterface.h  AlteracValley.cpp  AreaTrigger.cpp  Arenas.cpp  Channel.cpp  CharacterHandler.cpp  ClusterInterface.h  ConsoleCommands.cpp  ConsoleCommands.h  ConsoleListener.cpp  Container.cpp  Creature.cpp  Creature.h  DynamicObject.h  GameObject.h  GuildHandler.cpp  ItemHandler.cpp  ItemInterface.cpp  Level1.cpp  Level3.cpp  Map.cpp  MapMgr.h  MapScriptInterface.cpp  Master.cpp  MiscHandler.cpp  MovementHandler.cpp  NPCHandler.cpp  Object.cpp  Object.h  ObjectMgr.cpp  ObjectStorage.cpp  Pet.h  Player.cpp  Player.h  QueryHandler.cpp  Quest.cpp  Quest.h  QuestCommands.cpp  QuestHandler.cpp  (+33 more)
src/scripts/src/Common/: Base.cpp  Base.h  EasyFunctions.h  Instance_Base.cpp  Instance_Base.h
src/scripts/src/EventsScripts/: Event_DarkPortal.cpp  Event_DarkPortal.h  Setup.cpp  Setup.h
src/scripts/src/GossipScripts/: Setup.h
src/scripts/src/InstanceScripts/: Instance_Arcatraz.cpp  Instance_CullingOfStratholme.cpp  Instance_Deadmines.cpp  Instance_HellfireRamparts.cpp  Instance_MagistersTerrace.cpp  Instance_SethekkHalls.cpp  Instance_ShadowfangKeep.cpp  Instance_TheShatteredHalls.cpp  Instance_TheSteamvault.cpp  Instance_WailingCaverns.cpp  Setup.h
src/scripts/src/LuaEngine/: LUAEngine.cpp  LUAEngine.h  LUAFunctions.h
src/scripts/src/MiscScripts/: GameObjects.cpp  Setup.h
src/scripts/src/QuestScripts/: ArathiHighlands.cpp  Azuremyst_Isle.cpp  BladeEdge_Mountains.cpp  BlastedLands.cpp  DeathKnight.cpp  Desolace.cpp  FirstAid.cpp  (+25 more)
src/tools/ad/: System.cpp
src/tools/creature_data/: Main.cpp
src/tools/vmap_tools/: vmaps.sh
(+20 files in other folders)
